@@ -37,7 +37,7 @@
  * SUCH DAMAGE.
  *
  *
- * $Id: mntfs.c,v 1.27 2003/07/13 20:59:53 ib42 Exp $
+ * $Id: mntfs.c,v 1.28 2003/07/14 00:16:04 ib42 Exp $
  *
  */
 
@@ -123,11 +123,13 @@ find_mntfs(am_ops *ops, am_opts *mo, char *mp, char *info, char *auto_opts, char
 
   ITER(mf, mntfs, &mfhead) {
     /*
-     * For backwards compatibility purposes, we treat
-     * restarted filesystems differently and only require a match
-     * of their mount point, not of their server info.
+     * For backwards compatibility purposes, we treat already-mounted
+     * filesystems differently and only require a match of their mount point,
+     * not of their server info. After all, there is little we can do if
+     * the user asks us to mount two different things onto the same mount: one
+     * will always cover the other one.
      */
-    if (STREQ(mf->mf_mount, mp) && ((mf->mf_flags & MFF_RESTART) || STREQ(mf->mf_info, info))) {
+    if (STREQ(mf->mf_mount, mp) && ((mf->mf_flags & MFF_MOUNTED) || (STREQ(mf->mf_info, info) && mf->mf_ops == ops))) {
       /*
        * Handle cases where error ops are involved
        */
